--- a/javascript_array_problem_01.html
+++ b/javascript_array_problem_01.html
@@ -1,10 +1,28 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <script type="text/javascript">
         function calculate(arr) {
           var result = 0;
           // TODO : 여기에 여러분이 직접 코딩을 해주세요.       
+	var result = 0;
+	    result = arr[0];
+    	for(i=1; i<arr.length; i++)
+    	{
+        	if(arr[i]=='+'){
+         	   result += arr[i+1];
+        	}
+		else if(arr[i]=='-'){
+			result -= arr[i+1];
+        	}
+		else if(arr[i]=='*'){
+			result *= arr[i+1];
+	        }
+		else if(arr[i]=='/'){
+			result /= arr[i+1];
+	        }
+    	}
+	return result;
           return result;
         }
 
