--- a/javascript_array_problem_02.html
+++ b/javascript_array_problem_02.html
@@ -1,9 +1,14 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <script type="text/javascript">
-        function check_string() {
+        function check_string(str) {
           // TODO : 여기에 여러분이 직접 코딩을 해주세요.          
+	                  var left = str.split('(');
+		  var right =str.split(')');
+		if( left.length==right.length){
+			return true;
+            	} else return false;          
           return true;
         }
 
